Fix a minor alignment issue on the address helper page

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -203,6 +203,10 @@ div.warning {
      font-weight: bold;
 }
 
+#proxyNewHost tr:last-child td:first-child {
+     vertical-align: top;
+}
+
 #proxyNewHost textarea {
      white-space: pre-wrap;
      word-break: break-all;
