--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -1062,6 +1062,10 @@ div.logo hr {
      font-weight: bold;
 }
 
+#proxyNewHost tr:last-child td:first-child {
+     vertical-align: top;
+}
+
 #proxyNewHost textarea {
      white-space: pre-wrap;
      word-break: break-all;
